Starting the Script editing

--- a/index.html
+++ b/index.html
@@ -25,21 +25,29 @@
     <div class="container">
         <nav class="nav nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Start a new Challenge</a>
+                <a class="nav-link active" id="new" href="#">Start a new Challenge</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Easy</a>
+                <a class="nav-link active" id="easy" href="#">Easy</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Normal</a>
+                <a class="nav-link active" id="normal" href="#">Normal</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Hard</a>
+                <a class="nav-link active" id="hard" href="#">Hard</a>
             </li>
         </nav>
 
-        <div id="">
-
+        <div class="row">
+            <div class="col-sm-4 d-block"><div id="color1"></div></div>
+            <div class="col-sm-4 d-block"><div id="color2"></div></div>
+            <div class="col-sm-4 d-block"><div id="color3"></div></div>
+            <div class="col-sm-4 d-none"><div id="color4"></div></div>
+            <div class="col-sm-4 d-none"><div id="color5"></div></div>
+            <div class="col-sm-4 d-none"><div id="color6"></div></div>
+            <div class="col-sm-4 d-none"><div id="color7"></div></div>
+            <div class="col-sm-4 d-none"><div id="color8"></div></div>
+            <div class="col-sm-4 d-none"><div id="color9"></div></div>
         </div>
     </div>
 
