Added a space in the colors (HTML) and the new game and dificulties are working great!

--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
         </nav>
 
         <div class="row">
-            <div class="col-sm-4 d-block"><div id="color1"></div></div>
-            <div class="col-sm-4 d-block"><div id="color2"></div></div>
-            <div class="col-sm-4 d-block"><div id="color3"></div></div>
-            <div class="col-sm-4 d-none"><div id="color4"></div></div>
-            <div class="col-sm-4 d-none"><div id="color5"></div></div>
-            <div class="col-sm-4 d-none"><div id="color6"></div></div>
-            <div class="col-sm-4 d-none"><div id="color7"></div></div>
-            <div class="col-sm-4 d-none"><div id="color8"></div></div>
-            <div class="col-sm-4 d-none"><div id="color9"></div></div>
+            <div class="col-sm-4"><div id="color1"></div></div>
+            <div class="col-sm-4"><div id="color2"></div></div>
+            <div class="col-sm-4"><div id="color3"></div></div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-sm-4"><div id="color4"></div></div>
+            <div class="col-sm-4"><div id="color5"></div></div>
+            <div class="col-sm-4"><div id="color6"></div></div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-sm-4"><div id="color7"></div></div>
+            <div class="col-sm-4"><div id="color8"></div></div>
+            <div class="col-sm-4"><div id="color9"></div></div>
         </div>
     </div>
 
