Project Done! still needs a better design but it's working by now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="display-4">Color Picker Challenge</h1>
             <p class="lead" id="colorToFind">RGB( 255, 255, 255 )</p>
             <hr class="my-4">
-            <p id="innerContent">Find the color</p>
+            <p id="innerContent">Click Any Box</p>
         </div>
     </div>
 
